--- a/index.html
+++ b/index.html
@@ -208,8 +208,15 @@
 
 			}
 
+			.first-section * span>a {
+
+				font-size: 11px;
+
+			}
+
 			.second-section-points h3 {
 				font-size: 11px;
+
 
 			}
 
