--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@
 			margin: 0 auto;
 		}
 
+		.masthead {
+
+
+			max-width: 756px;
+
+		}
+
 		.first-section {
 			padding: 40px 55px 13px 55px;
 		}
@@ -235,19 +242,14 @@
 
 			}
 
-			.body-div {
 
-
-				max-width: 756px;
-
-			}
 		}
 	</style>
 </head>
 
 <body leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" style="font-family:Calibri;">
 	<div class="body-div">
-		<img src="images/banner-full.png" alt="Masthead" width="756" style="display: block;">
+		<img class="masthead" src="images/banner-full.png" alt="Masthead" style="display: block;">
 		<div class="first-section">
 			<!-- <p class="first-sec-p1">Wishing you all a very healthy, happy, and prosperous 2021.</p> -->
 
