--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
 		.body-div {
 
 			background-color: black;
-			width: 756px;
+			max-width: 756px;
 			margin: 0 auto;
 		}
 
 		.masthead {
 
 
-			max-width: 756px;
+			width: 100%;
 
 		}
 
