--- a/index.html
+++ b/index.html
@@ -37,15 +37,8 @@
 		.body-div {
 
 			background-color: black;
-			max-width: 756px;
+			width: 756px;
 			margin: 0 auto;
-		}
-
-		.masthead {
-
-
-			width: 100%;
-
 		}
 
 		.first-section {
@@ -241,15 +234,13 @@
 				font-size: 13px;
 
 			}
-
-
 		}
 	</style>
 </head>
 
 <body leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" style="font-family:Calibri;">
 	<div class="body-div">
-		<img class="masthead" src="images/banner-full.png" alt="Masthead" style="display: block;">
+		<img src="images/banner-full.png" alt="Masthead" width="756" style="display: block;">
 		<div class="first-section">
 			<!-- <p class="first-sec-p1">Wishing you all a very healthy, happy, and prosperous 2021.</p> -->
 
