--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
 	<title>TTC Newsletter</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+
 
 	<!--favicon and touch icon-->
 	<link rel="icon" type="image/png" href="./images/TTC_favicon.png">
@@ -238,11 +238,11 @@
 	</style>
 </head>
 
-<body leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" style="font-family:Calibri;">
+<body style="font-family:Calibri;">
 	<div class="body-div">
 		<img src="images/banner-full.png" alt="Masthead" width="756" style="display: block;">
 		<div class="first-section">
-			<!-- <p class="first-sec-p1">Wishing you all a very healthy, happy, and prosperous 2021.</p> -->
+
 
 			<p class="first-sec-p2">As we enter a new year, much has been said and written about 2020 – much, that is
 				focused on how best to forget a year like it; since, it brought tremendous hardship to the global
