--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
 
-<!DOCTYPE html>
+
+
 <html lang="en">
 
 <head>
@@ -407,12 +407,12 @@
 				</p>
 				<ul class="stay-ahead-ul">
 					<li><a href="https://www.amazon.in/dp/1637146647/ref=sr_1_1?dchild=1&keywords=transformation+in+times+of+crisis&qid=1606461488&sr=8-1"
-							target="_blank"><img src="./images/az_india_button.png" alt=""></a></li>
+							target="_blank"><img src="./images/az_india_button.png" alt="amazon india"></a></li>
 					<li><a href="https://www.amazon.com/dp/1637147554" target="_blank"><img
-								src="./images/az_us_button.png" alt=""></a>
+								src="./images/az_us_button.png" alt="amazon us"></a>
 					</li>
 					<li><a href="https://www.amazon.co.uk/dp/B08P5W6Y9P/ref=sr_1_1?dchild=1&keywords=transformation+in+times+of+crisis&qid=1606461311&sr=8-1"
-							target="_blank"><img src="./images/az_uk_button.png"></a></li>
+							target="_blank"><img src="./images/az_uk_button.png" alt="amazon uk"></a></li>
 
 				</ul>
 				<p>If you would like to share your thoughts or stories with us, here is the <span><a
